recaptcha overflow in contact section fixed, mobile edit page dual scroll off, offers better usability on small screens, not found page styling on mobile fixed, cache control on flavor images set to 1wk, edit buttons populate current picture and name, save and delete buttons when editing, delete action works, sticky open today svg sizing on android fixed

--- a/client/stylesheets/contact.scss
+++ b/client/stylesheets/contact.scss
@@ -1,6 +1,3 @@
-#contact{
-	overflow-x:hidden;
-}
 #contact-form{
 	margin-top:30px;
 
@@ -61,8 +58,7 @@
 	margin-top:4.2em;
 }
 .extended-content-container{
-	width: 200%;
-    margin-left: -50%;
+	width: 100%;
 }
 
 #contact-form{
@@ -96,6 +92,26 @@
 		}
 		.error-msg{
 			margin-bottom:10px;
+		}
+	}
+}
+@media(max-width:414px){
+	#contact{
+		padding: 40px 30px;
+	}
+}
+
+@media(max-width:320px){
+	#contact{
+		padding: 40px 0;
+	}
+	#contact-form{
+		.name-and-email{
+			padding:0 25px;
+		}
+
+		.comment{
+			padding:0 25px;
 		}
 	}
 }
