--- a/client/stylesheets/notFound.scss
+++ b/client/stylesheets/notFound.scss
@@ -5,5 +5,9 @@
 	right:0;
 	left:0;
 	text-align:center;
-	padding-top:50px;
+	padding:50px 10%;
+
+	img{
+		width:100%
+	}
 }
