--- a/client/stylesheets/slideshow.scss
+++ b/client/stylesheets/slideshow.scss
@@ -172,7 +172,7 @@
 	#openSign{
 		width:150px;
 		img{
-			width:150px;
+			width:130px;
 		}
 	}
 	.open-text{
